@@ -60,6 +60,9 @@ class TestAepack(unittest.TestCase):
             import Carbon.File
         except:
             return
+
+        if not hasattr(Carbon.File, "FSSpec"):
+            return
         o = Carbon.File.FSSpec(os.curdir)
         packed = aepack.pack(o)
         unpacked = aepack.unpack(packed)
@@ -69,6 +72,8 @@ class TestAepack(unittest.TestCase):
         try:
             import Carbon.File
         except:
+            return
+        if not hasattr(Carbon.File, "FSSpec"):
             return
         o = Carbon.File.FSSpec(os.curdir).NewAliasMinimal()
         packed = aepack.pack(o)
